# nexus

./: .goreleaser.yml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  DESIGN.md  Dockerfile  Dockerfile.test  Makefile  POLISH.md  README.md  SPEC-v0.4.md  coverage.out  docker-compose.yml  go.mod  go.sum  nexus.example.toml  nexus.toml  release-please-config.json
.github/workflows/: ci.yml  goreleaser.yml  release-please.yml
cmd/nexusd/: main.go  main_test.go
examples/: README.md
examples/docker-compose/: nexus.compose.toml
examples/docker-service/: Dockerfile  main.go  main_test.go
examples/microservices-compose/: Dockerfile.nexusd  README.md  docker-compose.yml
examples/ping-pong/: main.go  main_test.go
examples/pipeline/: main.go  main_test.go
pkg/config/: config.go  config_test.go  types.go
pkg/controlplane/: limits.go
pkg/daemon/: control.go  control_test.go  daemon.go  daemon_integration_linux_test.go  daemon_test.go  docker.go  docker_test.go  health.go  health_test.go  logwriter_test.go  order_test.go  process.go
pkg/registry/: discovery.go  registry.go  registry_test.go  service.go
pkg/sdk/: client.go  client_integration_linux_test.go  client_test.go  conn_pool.go  conn_pool_test.go  node.go  node_integration_linux_test.go  node_test.go  (+2 more)
pkg/sdk/python/: nexus_sdk.py  pyproject.toml
pkg/sdk/python/src/nexus_sdk/: __init__.py  fd.py  node.py  pool.py  registry.py  transport.py
pkg/sdk/python/tests/: conftest.py  test_fd.py  test_node.py  test_node_integration_real_daemon.py  test_pool.py  test_registry.py  test_transport.py
(+32 files in other folders)
